--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,36 @@
+alembic==1.4.2
 aniso8601==8.0.0
 astroid==2.4.1
 certifi==2020.6.20
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+Flask-Migrate==2.5.3
 Flask-OAuthlib==0.9.5
 Flask-RESTful==0.3.8
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.3
+gunicorn==20.0.4
 idna==2.10
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.1
 lazy-object-proxy==1.4.3
+Mako==1.1.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 oauthlib==2.1.0
 pylint==2.5.2
+PyMySQL==0.10.0
+python-dateutil==2.8.1
+python-editor==1.0.4
 pytz==2020.1
 requests==2.24.0
 requests-oauthlib==1.3.0
 six==1.15.0
 SQLAlchemy==1.3.18
 toml==0.10.1
+typed-ast==1.4.1
 urllib3==1.25.9
 Werkzeug==1.0.0
 wrapt==1.12.1
